# cpack-exercise-wt2526

./: CMakeLists.txt  Dockerfile  copyright  docker-entry.sh
cmake/: CPackConfig.cmake
debian/: changelog
uncompressed/: changelog  cpackexample.3
